# guardrag

./: .env.template  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  setup.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
docs/: architecture.md  requirements.md  resume-entry.md  tech-spec.md
guardrag/: __init__.py
guardrag/api/: __init__.py  dependencies.py  main.py
guardrag/api/routes/: __init__.py  chat.py  documents.py  guardrails.py  system.py
guardrag/core/: __init__.py  config.py  constants.py  exceptions.py  models.py
guardrag/infra/: __init__.py  chroma_store.py  database.py  embedding.py  llm.py
guardrag/services/: __init__.py  chat.py  chunker.py  document.py  parser.py  retriever.py
guardrag/services/guardrails/: __init__.py  input_guardrail.py  output_guardrail.py  retrieval_guard.py
tests/: conftest.py
tests/test_api/: test_chat.py  test_documents.py  test_guardrails.py  test_system.py
tests/test_services/: test_guardrails.py  test_parser.py
web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
web/src/: App.tsx  index.css
web/src/api/: chat.ts  client.ts  documents.ts  guardrails.ts  system.ts
web/src/components/: ChatInput.tsx  ChatMessage.tsx  ConfidenceMeter.tsx  FileUpload.tsx  GuardrailBadge.tsx  Header.tsx  Sidebar.tsx  SourcePanel.tsx  Toast.tsx
web/src/hooks/: useDocuments.ts  useSSE.ts
web/src/pages/: ChatPage.tsx  DocumentsPage.tsx  GuardrailsPage.tsx  StatsPage.tsx
(+1 files in other folders)
